Switched to App Engine Gradle plugin.