@@ -1,5 +1,82 @@
-task assemble << {
+apply plugin: 'java'
+apply plugin: 'war'
+apply plugin: 'appengine'
+
+def appId = "socialfridge"
+def appEmail = "mattias.buelens@gmail.com"
+
+def appengineVersion = "1.9.0"
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.google.appengine:gradle-appengine-plugin:1.8.9"
+    }
 }
 
-task clean << {
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
+dependencies {
+    appengineSdk "com.google.appengine:appengine-java-sdk:${appengineVersion}"
+
+    compile "javax.servlet:servlet-api:2.5"
+    compile "org.apache.geronimo.specs:geronimo-jpa_2.0_spec:1.1"
+    compile "com.google.code.findbugs:jsr305:2.0.3"
+    compile "javax.inject:javax.inject:1"
+
+    compile "org.datanucleus:datanucleus-core:3.1.3"
+    compile "org.datanucleus:datanucleus-api-jpa:3.1.3"
+    compile "com.google.appengine.orm:datanucleus-appengine:2.1.2"
+
+    compile "com.ganyo:gcm-server:1.0.2"
+
+    compile "com.google.appengine:appengine-api-1.0-sdk:${appengineVersion}"
+    compile "com.google.appengine:appengine-endpoints:${appengineVersion}"
+    compile "com.google.appengine:appengine-testing:${appengineVersion}"
+    compile "com.google.appengine:appengine-api-stubs:${appengineVersion}"
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir "src/main/java"
+        }
+        output.classesDir = "src/main/webapp/WEB-INF/classes"
+    }
+}
+
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_1_7
+    targetCompatibility = JavaVersion.VERSION_1_7
+}
+
+appengine {
+    jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8889', '-Xmx1024m', '-XX:MaxPermSize=512m']
+    downloadSdk = true
+    warDir = file('src/main/webapp')
+
+    appcfg {
+        update {
+            useJava7 = true
+        }
+
+        email = "${appEmail}"
+        passIn = true
+
+        logs {
+            severity = 1
+            numDays = 1
+            outputFile = file("${appId}.log")
+        }
+
+        app {
+            id = "${appId}"
+            version = "1"
+        }
+    }
 }
